samples/_failures_safe/1761193833_882c83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ecfb912.c: In function ‘main’:
./samples/SAFE/__tmp_5ecfb912.c:139:5: error: expected declaration or statement at end of input
  139 |     }
      |     ^
